# django-ergo

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_DECISIONS.md  AUTHORS.md  CLAUDE.md  CONTRIBUTORS.txt  HISTORY.md  LICENSE  MANIFEST.in  Makefile  OPENAI_TESTING_SUMMARY.md  PLUGGABLE_EMBEDDING_SYSTEM.md  PROGRESS_SUMMARY.md  QUESTIONS.md  RAG_TESTING_STRATEGY.md  README.md  ROADMAP.md  STATUS.md  SUMMARY.md  TODO.md  pyproject.toml  pytest.ini
.cursor/: Dockerfile  README.md  openai_testing_rules.md  setup.sh  start.sh
.cursor/rules/: README.md  ai-development.mdc  code-quality.mdc  django-development.mdc  project-organization.md  project-structure.mdc  python-standards.mdc  testing-standards.mdc
.github/workflows/: test.yml
docs/: README.md  api_documentation.md
docs/product/: garden-management-app.md  personal-goals-app.md
docs/superpowers/plans/: 2026-03-30-conversation-renderer-and-history-toolkit.md  2026-03-30-multi-engine-conversation-framework.md  2026-03-31-toolkit-protocol-and-kb-toolkit.md  2026-04-01-kb-write-toolkit.md  2026-04-02-kb-suggest-toolkit.md  2026-04-03-kb-usage-tracking-and-expert-example.md  2026-04-04-kb-absorption-pipeline.md
docs/superpowers/specs/: 2026-03-27-multi-engine-conversation-framework-design.md  2026-03-30-conversation-renderer-and-history-toolkit-design.md  2026-03-31-toolkit-protocol-and-kb-toolkit-design.md  2026-04-01-kb-write-toolkit-design.md  2026-04-02-kb-suggest-toolkit-design.md  2026-04-03-kb-usage-tracking-and-expert-example-design.md  2026-04-04-kb-absorption-pipeline-design.md
examples/: README.md  rag_examples.py  thumbs_feedback_system.py
examples/ecom_db_admin/: .env.example  .gitignore  README.md  demo_scenario.py  demo_tests.py  manage.py  requirements.txt  setup.sh
examples/ecom_db_admin/ecom_db_admin/: settings.py  test_runner.py  urls.py  wsgi.py
examples/ecom_db_admin/shop/: admin.py  apps.py  ingestion.py  models.py  tools.py  urls.py  views.py  workflows.py
examples/ecom_db_admin/shop/fixtures/: openai_generated_scenario.json  openai_ingestion_summary.md  timezone_correction_scenario.json
examples/ecom_db_admin/shop/management/commands/: generate_sample_data.py  run_ingestion.py
examples/ecom_db_admin/shop/tests/: test_end_to_end.py  test_fixtures.py  test_ingestion.py  test_openai_fixtures.py  test_openai_ingestion.py  test_tools.py
old-code-inspiration/: README.md  __init__.py  apps.py  fields.py  tools.py  workflow.py
old-code-inspiration/examples/: __init__.py  chat_example.py  openai_agent_example.py
old-code-inspiration/migrations/: 0001_initial.py  0002_workflow_userchat_chatmessage.py
old-code-inspiration/models/: __init__.py  chat.py  kb.py  kb_tests.py
old-code-inspiration/workflows/: __init__.py  engine.py  ingest.py  openai_agent.py
requirements/: requirements.txt  requirements_dev.txt  requirements_test.txt
src/django_ergo/: __init__.py  admin.py  approval_demo.py  apps.py  embedding_providers.py  fields.py  kb_pipelines.py  kb_strategy_toolkit.py  kb_suggest_toolkit.py  kb_toolkit.py  kb_tools.py  kb_write_toolkit.py  models.py  settings.py  tools.py  urls.py  vector_performance.py  views.py  workflow_engine.py
src/django_ergo/conversation/: __init__.py  adapters.py  engine.py  history_toolkit.py  manager.py  models.py  pipelines.py  renderer.py  runner.py  runtime.py  telemetry.py  toolkit.py
src/django_ergo/conversation/engines/: __init__.py  claude_api.py  claude_cli.py  openai_api.py
src/django_ergo/conversation/importers/: __init__.py  claude_cli.py
src/django_ergo/management/commands/: create_sample_data.py  import_conversations.py  optimize_vector_search.py
src/django_ergo/migrations/: 0000_create_vector_extension.py  0001_initial.py  0002_add_vector_indexes.py  0003_add_approval_message_types.py  0004_conversationsession_claudemessage_openaimessage_and_more.py  0005_claudemessage_cache_creation_input_tokens_and_more.py  0006_conversationkbusage.py  0007_remove_cli_transport_type.py  0008_alter_conversationsession_transport_type.py  0009_knowledgebase_organization_strategy.py
src/django_ergo/templates/admin/django_ergo/: chat_history.html  conversation_transcript.html  knowledgebase_manage.html  workflow_monitor.html
src/django_ergo/templates/django_ergo/: my_template.html
tests/: README_HYBRID_TESTING.md  conftest.py  openai_test_utils.py  test_conversation_adapters.py  test_conversation_claude_api.py  test_conversation_claude_cli.py  test_conversation_engine.py  test_conversation_generate.py  test_conversation_import.py  test_conversation_manager.py  test_conversation_models.py  test_conversation_openai_api.py  test_conversation_pipelines.py  test_conversation_renderer.py  test_conversation_runner.py  test_conversation_runtime.py  test_conversation_telemetry.py  test_conversation_toolkit.py  test_embedding_providers_simple.py  test_example_company_handbook.py  test_example_personal_memory.py  test_import_command.py  test_kb_expert_example.py  test_kb_pipelines.py  test_kb_suggest_toolkit.py  test_kb_toolkit.py  test_kb_tools.py  test_kb_usage_tracking.py  test_kb_write_toolkit.py  test_openai_fields.py  test_openai_workflow.py  test_rag_system.py  test_settings.py  test_thumbs_feedback.py  test_tool_registry.py  test_tool_registry_unit.py  test_toolkit_protocol.py  test_workflow_engine.py
tests/example_app/: README.md  api.py  auth.py  schemas.py  settings.py  urls.py
tests/fixtures/: __init__.py
