# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-ergo"
description = "AI Knowledgebase Toolkit for Django"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "django>=4.2",
    "django-environ",
    "psycopg[binary]",
    "pgvector",
    "openai",
]

dynamic = ["version", "readme"]
requires-python = ">=3.8"
authors = [
  { name = "leeward bound", email = "leeward@Boundcorp.net" },
]

[project.urls]
# Homepage = "https://github.com/boundcorp/django-ergo"
# Documentation = "https://readthedocs.org//django-ergo"
Repository = "https://github.com/boundcorp/django-ergo.git"
Issues = "https://github.com/boundcorp/django-ergo/issues"
Changelog = "https://github.com/boundcorp/django-ergo/blob/master/HISTORY.md"

# [project.scripts]
# django_ergo = "django_ergo.cli:run"

[project.optional-dependencies]
telemetry = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
]
dev = [
    "twine",
    "wheel",
    "build",
    "django>=4.2",
    "django-environ",
    "django-extensions",
    "pip-freezer",
    "pytest",
    "pytest-mock",
    "ruff",
    "coverage",
    "djlint",
    "pre-commit",
    "factory-boy",
    "django-coverage-plugin",
    "pytest-django",
    "pytest-asyncio",
    "psycopg[binary]",
    "pgserver",
    "python-dotenv",
    # API Example Dependencies
    "django-ninja>=1.1.0",
    "pydantic>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "django-cors-headers>=4.3.0",
]

[tool.setuptools.packages.find]
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "django_ergo.__version__" }
readme = { file = ["README.md", "HISTORY.md"], content-type = "text/markdown" }


# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=tests.example_app.settings --reuse-db"
python_files = ["tests.py", "test_*.py"]
norecursedirs = ["node_modules"]
filterwarnings = "ignore::DeprecationWarning"
pythonpath = "src"

# ==== Coverage ====
[tool.coverage.run]
include = ["*/django_ergo/**/*.py"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

[tool.coverage.report]
exclude_also = [
  "def __repr__",
  # "def __str__",
]

# ==== mypy ====
[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "*/migrations/*.py",
  "staticfiles/*",
]
# Same as Django: https://github.com/cookiecutter/cookiecutter-django/issues/4792.
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "INT",
  # "ARG", # Unused function argument
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  # "FURB",
  # "LOG",
  "RUF",
]
ignore = [
  "S101",   # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  "ERA001",
  "PGH004",
  "E501",
]
# Project specifc ignore
extend-ignore = [
  "S106",   # hardcoded password in tests
  "RUF005", # iterable unpacking instead of concatenation
  "S104",   # Possible binding to all interfaces,
  "S311",   # We're not using it for cryptography
  "FBT001", # Boolean typed positional argument
  "FBT002", # Boolean default positional argument
  "S308",   # mark_safe is ok here
  # "SLF001"  # accessing private _meta is ok here
  "TRY300", # Consider moving this statement to an `else` block
  "COM812", # Recommended from ruff
  "ISC001", # Recommended from ruff
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "PT009",  # Use a regular assert instead of unittest-style assert (TestCase uses assertEqual etc.)
  "S",      # Security checks not needed in test files
  "SLF001", # Accessing private members is acceptable in tests
  "T201",   # Print statements are acceptable in tests (e.g. fixture generation output)
  "PLR2004", # Magic values are acceptable in tests (e.g. embedding dimensions)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = true
